--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "prepublish": "gulp prepublish",
     "test": "gulp"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lodash": "^4.13.1"
+  }
 }
